# Sexagesimal-Calculator

./: .gitignore  .pre-commit-config.yaml  404.html  GEMINI.md  LICENSE  README.md  demo.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  docs.yml  gemini-scheduled-triage.yml  pytest-coverage.yml  release.yml
about/: index.html
api/: index.html
docs/: about.md  api.md  index.md  internals.md
docs/guide/: arithmetic.md  basic-usage.md  conversions.md  explanations.md  installation.md  utilities.md
guide/arithmetic/: index.html
guide/basic-usage/: index.html
guide/conversions/: index.html
guide/explanations/: index.html
guide/installation/: index.html
guide/utilities/: index.html
internals/: index.html
sexagesimal_calculator/: sexagesimal.py
sexagesimal_calculator.egg-info/: PKG-INFO
src/sexagesimal_calculator/: __init__.py  arithmetic.py  contants.py  conversion.py  core.py  exceptions.py  explain.py  sexagesimal.py  utils.py
test/: test_01_initialization.py  test_02_comparison.py  test_03_unary_ops.py  test_04_arithmetic.py  test_05_rounding.py  test_06_utils.py  test_07_explain.py  test_99_property_based.py  test_sexagesimal.py
testing/: test_sexagesimal.py
