[project]
name = "sexagesimal-calculator"
version = "1.2.1"
description = "Performing calculations in Sexagesimal Coordinate System."
readme = "README.md"
authors = [
    { name = "Hrushikesh Pawar", email = "hrushikesh.vpawar@gmail.com" }
]
maintainers = [
  {name = "Hrushikesh Pawar", email = "hrushikesh.vpawar@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["sexagesimal", "calculator", "coordinates", "coordinate system"]
classifiers = [
    "Development Status :: 5 - Stable",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "sympy>=1.14.0",
]

[project.scripts]
sexagesimal-calculator = "sexagesimal_calculator:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
